--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>civitas.celestis</groupId>
     <artifactId>Moebius</artifactId>
-    <version>0.1-PuddleJumper</version>
+    <version>0.2</version>
 
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
