--- a/MoebiusEditor/pom.xml
+++ b/MoebiusEditor/pom.xml
@@ -17,4 +17,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>civitas.celestis</groupId>
+            <artifactId>MoebiusEngine</artifactId>
+            <version>0.2</version>
+        </dependency>
+    </dependencies>
+
 </project>
