--- a/MoebiusEngine/pom.xml
+++ b/MoebiusEngine/pom.xml
@@ -18,6 +18,13 @@
     </properties>
 
     <dependencies>
+        <!-- Math APIs -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version> <!-- Use the version you want -->
+        </dependency>
+
         <!-- Graphics APIs -->
 
         <dependency>
